[package]
name = "mxrxtx"
version = "0.1.0"
authors = ["Erkki Seppälä <erkki.seppala@vincit.fi>"]
edition = "2018"

[dependencies]
anyhow = "1.0.44"
async-channel = "1.8.0"
async-condvar-fair = { version = "1.0.0", features = ["tokio"] }
async-datachannel = { git = "https://github.com/eras/async-datachannel", rev = "1083bb6b72d7ebb9c9ca3aa881dd9d742f25c3b0" }
async-trait = "0.1.60"
atomicwrites = "0.3.0"
bytes = "1.3.0"
clap = "3.0.0" #_FOR_WINDOWS clap = { version = "3.0.0-beta.2", features = ["std", "suggestions", "derive", "cargo"], default-features = false, optional = false }
directories-next = "2.0.0"
futures = { version = "0.3.25", features = ["compat"] }
futures-channel = "0.3.25"
futures-util = "0.3.25"
log = "0.4.14"
log4rs = "1.0.0"
matrix-sdk = { version="0.6.2", features = ["sled"] }
matrix-sdk-sled = "0.2.0"
matrix_uri = "0.1.0"
pin-utils = "0.1.0"
regex = "1.5.4"
ruma = "0.7.4"
ruma-client-api = "0.15.3"
ruma-common = "0.10.5"
ruma-events = "0.26.1"
ruma-identifiers = "0.22.1"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
tempdir = "0.3.7"
termion = "1.5.6"
thiserror = "1.0.29"
tokio = { version = "1.12.0", features = ["test-util", "tokio-macros", "macros", "signal", "rt-multi-thread"] }
toml = "0.5.8"
url = "2.2.2"
uuid = { version = "1.2.2", features = ["serde"] }

[build-dependencies]
vergen = "3"
