[package]
name = "mxrxtx"
version = "0.1.9"
authors = ["Erkki Seppälä <erkki.seppala@vincit.fi>"]
edition = "2018"

[dependencies]
anyhow = "1.0.44"
async-channel = "1.8.0"
async-condvar-fair = { version = "1.0.0", features = ["tokio"] }
async-datachannel = { git = "https://github.com/eras/async-datachannel", rev = "6770399337f0701853495cd5c9589ffab4a3306c" }
async-trait = "0.1.60"
atomicwrites = "0.3.0"
bytes = "1.3.0"
clap = "3.0.0" #_FOR_WINDOWS clap = { version = "3.0.0-beta.2", features = ["std", "suggestions", "derive", "cargo"], default-features = false, optional = false }
directories-next = "2.0.0"
env_logger = "0.10.0"
futures = { version = "0.3.25", features = ["compat"] }
futures-channel = "0.3.25"
futures-util = "0.3.25"
log = "0.4.14"
matrix-sdk = { git = "https://github.com/matrix-org/matrix-rust-sdk", rev = "386cbce34412e50b40d65fb7f6473fcbc3128c95", features = ["sled", "e2e-encryption"] }
matrix-sdk-sled = "0.2.0"
matrix_uri = "0.1.0"
pin-utils = "0.1.0"
regex = "1.5.4"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.68"
tempdir = "0.3.7"
thiserror = "1.0.29"
tokio = { version = "1.24.0", features = ["test-util", "tokio-macros", "macros", "signal", "rt-multi-thread"] }
toml = "0.5.8"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.2.2"
uuid = { version = "1.2.2", features = ["serde", "v4"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
termion = "1.5.6"

[build-dependencies]
vergen = "3"
